adds a beautiful design

--- a/website/index (1).html
+++ b/website/index (1).html
@@ -78,9 +78,9 @@
                     <div class="img-upload__preview-container">
                         <!-- Изменение размера изображения -->
                         <fieldset class="img-upload__scale scale hidden">
-                            <button type="button" class="scale__control scale__control--smaller button button-2">Уменьшить</button>
+                            <button type="button" class="scale__control scale__control--smaller button">Уменьшить</button>
                             <input type="text" class="scale__control scale__control--value" value="100%" title="Image Scale" name="scale" readonly>
-                            <button type="button" class="scale__control scale__control--bigger button button-2">Увеличить</button>
+                            <button type="button" class="scale__control scale__control--bigger button">Увеличить</button>
                         </fieldset>
 
                         <!-- Предварительный просмотр изображения -->
@@ -90,11 +90,12 @@
                             </div>
                         </div>
 
-                        <!-- Кнопка для закрытия формы редактирования изображения -->
-                        <button type="reset" class="button button-2 button-text">Закрыть</button>
+                        <!-- Кнопки для очистки и проверки -->
+                        <button type="reset" class="button button-2 button-text">Закрыть</button> 
+                        <button type="submit" class="button button-3 button-text" id="check-button">Проверить</button>
                     </div>
 
-                    <!-- Кнопки для очистки и проверки -->
+                    <!-- Кнопки для очистки и проверки 
                     <div class="buttons-container">
                         <div class="button button-2">
                             <div class="button-text">Очистить</div>
@@ -102,7 +103,7 @@
                         <div class="button button-3">
                             <button type="submit" class="button-text" id="check-button">Проверить</button>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
           </form>
