--- a/website/index (1).html
+++ b/website/index (1).html
@@ -91,11 +91,11 @@
                         </div>
 
                         <!-- Кнопки для очистки и проверки -->
-                        <button type="reset" class="button button-2 button-text">Закрыть</button> 
+                        <button type="reset" class="button button-2 button-text">Закрыть</button>
                         <button type="submit" class="button button-3 button-text" id="check-button">Проверить</button>
                     </div>
 
-                    <!-- Кнопки для очистки и проверки 
+                    <!-- Кнопки для очистки и проверки
                     <div class="buttons-container">
                         <div class="button button-2">
                             <div class="button-text">Очистить</div>
@@ -126,10 +126,48 @@
       <!-- Group 2 -->
       <div class="group-2">
         <!-- Окно полезные ссылки -->
-        <div class="useful-links-window"></div>
+        <div class="useful-links-window">
+            <ul class="sources-list">
+              <li class="sources-item">
+                <a href="https://journal.mediest.ru/sostav-kosmetiki-ingredienty/" target="_blank" class="sources-link">Mediest</a>
+                <span class="sources-description"> - Состав косметики: ингредиенты</span>
+              </li>
+              <li class="sources-item">
+                <a href="https://revival-clinic.ru/journal/10-mifov-ob-uhode-za-kozhej-v-kotorye-pora-prestat-verit-po-mneniyu-ekspertov/" target="_blank" class="sources-link">Revival Clinic</a>
+                <span class="sources-description"> - 10 мифов об уходе за кожей</span>
+              </li>
+              <li class="sources-item">
+                <a href="https://www.harpersbazaar.com/beauty/skin-care/a28352553/clean-beauty/" target="_blank" class="sources-link">Harper's Bazaar</a>
+                <span class="sources-description"> - Чистая косметика</span>
+              </li>
+              <li class="sources-item">
+                <a href="https://habr.com/ru/companies/geltek/articles/409169/" target="_blank" class="sources-link">Habr</a>
+                <span class="sources-description"> - Как правильно читать состав косметики</span>
+              </li>
+            </ul>
+          </div>
 
         <!-- Окно источники -->
-        <div class="sources-window"></div>
+        <div class="sources-window">
+          <ul class="sources-list">
+            <li class="sources-item">
+              <a href="https://www.fda.gov/cosmetics/cosmetic-ingredients/allergens-cosmetics#common" target="_blank" class="sources-link">FDA Allergens</a>
+              <span class="sources-description"> - Аллергены, выявленные FDA</span>
+            </li>
+            <li class="sources-item">
+              <a href="https://www.fda.gov/cosmetics/cosmetics-laws-regulations/prohibited-restricted-ingredients-cosmetics#allowed" target="_blank" class="sources-link">FDA Prohibited Ingredients</a>
+              <span class="sources-description"> - Ингредиенты, запрещенные FDA</span>
+            </li>
+            <li class="sources-item">
+              <a href="https://ec.europa.eu/growth/tools-databases/cosing/reference/annexes/list/II" target="_blank" class="sources-link">EU CosIng Annex II</a>
+              <span class="sources-description"> - Запрещенные вещества в ЕС</span>
+            </li>
+            <li class="sources-item">
+              <a href="https://ec.europa.eu/growth/tools-databases/cosing/reference/annexes/list/III" target="_blank" class="sources-link">EU CosIng Annex III</a>
+              <span class="sources-description"> - Ограниченные вещества в ЕС</span>
+            </li>
+          </ul>
+        </div>
       </div>
     </main>
     <footer>
